<?xml version="1.0"?>
<package>
  <name>boost_ros_pkg</name>
  <version>0.0.0</version>
  <description>The boost_ros_pkg package</description>
  <maintainer email="koyama@jsk.imi.i.u-tokyo.ac.jp">koyama</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>
